-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 3.0.0
-
Ubuntu 12.04 LTS 64 bit
-
Limit title: 57f09e824aa9d207c70232f0c1421f4b8ad7c049 (12.12.2013, branch 3.0)
- Select "Tools" -> "Code Pasting" -> "Paste Snippet..." from the menu.
- Select Protocol "Paste.KDE.Org".
- In the big edit at the bottom, enter some text.
- In the "Description" edit box, enter: "Description 2013-12-11 10:38:21.676671".
- Click "Paste".
The dialog will close. Nothing else will happen in the GUI. On the command line, Creator will write: "Paste.KDE.Org protocol error: Could not send entry."
This shows two errors at once:
- Pasting should not break because of an entered description. If the description is malformed in some way and can't be used due to limitations of the protocol, the user should be informed about this before trying to paste.
- If pasting fails for a valid reason, Creator should inform the user honestly and directly, not with some text hidden on the command line.
Found while extending Squish test tst_codepasting.