KDE paste protocol: Limit the title to 30 characters.

Task-number: QTCREATORBUG-11065
Change-Id: I3d801e09f021913c750ec88028346bf54abccbf9
Reviewed-by: Robert Loehning <robert.loehning@digia.com>